building all class to functional flow of application smartrash v1
