# src/main/java/com/valros/ux/services/smartrash/controllers/TrukController.java
@@ -1,8 +1,8 @@
 package com.valros.ux.services.smartrash.controllers;
 
-import com.valros.ux.services.controller.UsersApi;
-import com.valros.ux.services.model.User;
-import com.valros.ux.services.smartrash.services.impl.UserService;
+import com.valros.ux.services.controller.TruksApi;
+import com.valros.ux.services.model.Truk;
+import com.valros.ux.services.smartrash.services.ITrukService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -15,63 +15,63 @@ import java.util.List;
 @Slf4j
 @RestController
 @RequestMapping("${application.api.base-path}")
-public class UserController implements UsersApi {
+public class TrukController implements TruksApi {
 
     @Autowired
-    private UserService userService;
+    private ITrukService iTrukService;
 
     @Override
-    public ResponseEntity<User> getUserById(String userId) {
+    public ResponseEntity<Truk> getTrukById(String trukId) {
         try {
             return ResponseEntity
                     .status(HttpStatus.OK)
-                    .body(userService.getUserById(userId));
+                    .body(iTrukService.getTrukById(trukId));
         } catch (Exception e) {
-            log.error("Error retrieving getUsers", e);
+            log.error("Error retrieving getTrukById", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
 
     @Override
-    public ResponseEntity<List<User>> getAllUsers() {
+    public ResponseEntity<List<Truk>> getAllTruks() {
         try {
             return ResponseEntity
                     .status(HttpStatus.OK)
-                    .body(userService.getAllUsers());
+                    .body(iTrukService.getAllTruks());
         } catch (Exception e) {
-            log.error("Error retrieving getAllUsers", e);
+            log.error("Error retrieving getAllTruks", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
 
     @Override
-    public ResponseEntity<User> postCreateUser(User user) {
+    public ResponseEntity<Truk> postCreateTruk(Truk truk) {
         try {
             return ResponseEntity
                     .status(HttpStatus.CREATED)
-                    .body(userService.createUser(user));
+                    .body(iTrukService.createTruk(truk));
         } catch (Exception e) {
-            log.error("Error retrieving postCreateUser", e);
+            log.error("Error retrieving postCreateTruk", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
 
     @Override
-    public ResponseEntity<Void> userDeleteById(String userId) {
+    public ResponseEntity<Void> trukDeleteById(String trukId) {
         try {
-            return userService.deleteUserById(userId);
+            return iTrukService.deleteTrukById(trukId);
         } catch (Exception e) {
-            log.error("Error retrieving postCreateUser", e);
+            log.error("Error retrieving trukDeleteById", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
 
     @Override
-    public ResponseEntity<User> userUpdateById(String userId, User user) {
+    public ResponseEntity<Truk> trukUpdateById(String trukId, Truk truk) {
         try {
-            return ResponseEntity.ok(userService.updateUser(user));
+            return ResponseEntity.ok(iTrukService.updateTruk(truk));
         } catch (Exception e) {
-            log.error("Error retrieving postCreateUser", e);
+            log.error("Error retrieving trukUpdateById", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
